--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,13 +111,14 @@ input, select, textarea {
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
+		border-bottom-color: transparent;
 		color: #B47935;
 		/* color: #49bf9d; */
 		text-decoration: none;
 	}
 
 		a:hover {
-			border-bottom-color: transparent;
+			border-bottom-color: inherit;
 			color: #B47935 !important;
 			text-decoration: none;
 		}
