--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,8 +213,10 @@ input, select, textarea {
 		border: solid 2px #efefef;
 		font-family: "Courier New", monospace;
 		font-size: 0.9em;
-		margin: 0 0.25em;
-		padding: 0.25em 0.65em;
+		margin: 0 0.0em;
+		padding: 0.1em 0.2em;
+		/* margin: 0 0.25em;
+		padding: 0.25em 0.65em; */
 	}
 
 	pre {
